apps/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-route
  namespace: default
spec:
  parentRefs:
    - name: homepage-gateway
      namespace: default
  hostnames:
    - homepage.local.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: homepage-gateway
      namespace: default
  hostnames:
    - homepage.local.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argo
      backendRefs:
        - name: argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: homepage-gateway
      namespace: default
  hostnames:
    - homepage.local.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: media
spec:
  parentRefs:
    - name: homepage-gateway
      namespace: default
  hostnames:
    - homepage.local.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /immich
      backendRefs:
        - name: immich-server
          port: 2283
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  parentRefs:
    - name: homepage-gateway
      namespace: default
  hostnames:
    - homepage.local.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hubble
      backendRefs:
        - name: hubble-ui
          port: 80
