apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homepage.local.lan
      secretName: homepage-tls
  rules:
  - host: homepage.local.lan
    http:
      paths:
      - path: /()?
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 80
      - path: /argo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      - path: /grafana(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
